--- a/index.html
+++ b/index.html
@@ -405,6 +405,7 @@
     <script src="js/scrollArrear.js"></script>
     <script src="js/sliderMini.js"></script>
     <script src="js/burger.js"></script>
+    <script src='http://code.jquery.com/jquery-2.1.1.min.js'></script>
 </body>
 
 </html>
