--- a/2110s.html
+++ b/2110s.html
@@ -312,6 +312,7 @@
     <script src="js/sliderMini.js"></script>
     <script src="js/specs.js"></script>
     <script src="js/burger.js"></script>
+    <script src='http://code.jquery.com/jquery-2.1.1.min.js'></script>
 </body>
 
 </html>
