--- a/5120.html
+++ b/5120.html
@@ -323,6 +323,7 @@
     <script src="js/sliderMini.js"></script>
     <script src="js/specs.js"></script>
     <script src="js/burger.js"></script>
+    <script src='http://code.jquery.com/jquery-2.1.1.min.js'></script>
 </body>
 
 </html>
