--- a/2060BT.html
+++ b/2060BT.html
@@ -2,15 +2,14 @@
 <html>
 
 <head> 
-<script src='http://code.jquery.com/jquery-2.1.1.min.js'></script>
 <meta charset="UTF-8"> 
 <title>basak-tms</title>
+<script src="js/jquery-3.6.1.min.js"></script>
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@400;500&family=Kanit:wght@700&family=Montserrat:wght@200;300;400;500;600;700&family=Play:wght@400;700&display=swap" rel="stylesheet">
 <link rel="stylesheet" type="text/css" href="style/main.css">
 <link rel="stylesheet" type="text/css" href="style/2060BT.css">
-<script src="js/startPage.js"></script> 
 <link rel="icon" href="pictures/favicon.ico" type="image/x-icon">
 </head>
 
@@ -312,7 +311,6 @@
     <script src="js/sliderMini.js"></script>
     <script src="js/specs.js"></script>
     <script src="js/burger.js"></script>
-    <script src='http://code.jquery.com/jquery-2.1.1.min.js'></script>
-</body>
+    
 
 </html>
