--- a/form.html
+++ b/form.html
@@ -2,9 +2,9 @@
 <html>
 
 <head> 
-<script src='http://code.jquery.com/jquery-2.1.1.min.js'></script>
 <meta charset="UTF-8"> 
 <title>basak-tms</title>
+<script src="js/jquery-3.6.1.min.js"></script>
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@400;500&family=Kanit:wght@700&family=Montserrat:wght@200;300;400;500;600;700&family=Play:wght@400;700&display=swap" rel="stylesheet">
@@ -248,7 +248,8 @@
     <script src="js/sliderMini.js"></script>
     <script src="js/burger.js"></script>
     <script src="js/specs.js"></script>
-    <script src='http://code.jquery.com/jquery-2.1.1.min.js'></script>
+    <script src="js/jquery-3.6.1.min.js"></script>
+    
 </body>
 
 </html>
