--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html>
 
 <head> 
-<script src='http://code.jquery.com/jquery-2.1.1.min.js'></script>
 <meta charset="UTF-8"> 
 <title>basak-tms</title>
+<script src="js/jquery-3.6.1.min.js"></script>
 <link rel="icon" href="pictures/favicon.ico" type="image/x-icon">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -405,7 +405,8 @@
     <script src="js/scrollArrear.js"></script>
     <script src="js/sliderMini.js"></script>
     <script src="js/burger.js"></script>
-    <script src='http://code.jquery.com/jquery-2.1.1.min.js'></script>
+    <script src="js/jquery-3.6.1.min.js"></script>
+    
 </body>
 
 </html>
