--- a/form.html
+++ b/form.html
@@ -62,7 +62,7 @@
                     <li class="aboutNav">
                         О компании
                     </li>
-                    <li class="modelsNav">
+                    <li class="modelsNav" onclick="location.href='index.html'">
                         <div class="subMenu">
                             <ul>
                                 <li  onclick="location.href='2060BT.html'">
