--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
         </section>
 
         <section class="gif" id="gif">
-            <img src="pictures/tractor.gif">
+            <!-- <img src="pictures/tractor.gif"> -->
         </section>
 
         <section class="models" id="models">
