--- a/2105s.html
+++ b/2105s.html
@@ -5,6 +5,7 @@
 <meta charset="UTF-8"> 
 <title>basak-tms</title>
 <script src="js/jquery-3.6.1.min.js"></script>
+<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@400;500&family=Kanit:wght@700&family=Montserrat:wght@200;300;400;500;600;700&family=Play:wght@400;700&display=swap" rel="stylesheet">
