--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head> 
 <meta charset="UTF-8"> 
 <title>basak-tms</title>
+<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <script src="js/jquery-3.6.1.min.js"></script>
 <link rel="icon" href="pictures/favicon.ico" type="image/x-icon">
 <link rel="preconnect" href="https://fonts.googleapis.com">
