--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head> 
 <meta charset="UTF-8"> 
-<title>basak-tms</title>
+<title>BASAK-ТМС</title>
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <script src="js/jquery-3.6.1.min.js"></script>
 <link rel="icon" href="pictures/favicon.ico" type="image/x-icon">
@@ -90,7 +90,7 @@
                                 </li>
                             </ul>
                         </div>
-                        Модельный ряд
+                        <a  onclick="location.href='index.html#gif'">Модельный ряд</a>
                     </li>
                     <li class="newsNav">
                         Новости
