--- a/2105s.html
+++ b/2105s.html
@@ -3,7 +3,7 @@
 
 <head> 
 <meta charset="UTF-8"> 
-<title>basak-tms</title>
+<title>BASAK-ТМС</title>
 <script src="js/jquery-3.6.1.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -62,7 +62,7 @@
                     <li class="aboutNav">
                         О компании
                     </li>
-                    <li class="modelsNav" onclick="location.href='index.html'">
+                    <li class="modelsNav">
                         <div class="subMenu">
                             <ul>
                                 <li  onclick="location.href='2060BT.html'">
@@ -91,7 +91,7 @@
                                 </li>
                             </ul>
                         </div>
-                        Модельный ряд
+                        <a  onclick="location.href='index.html#gif'">Модельный ряд</a>
                     </li>
                     <li class="newsNav">
                         Новости
