--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                         <li class="sslide"><img src="pictures/model3.png" alt="3" class="slide-img" onclick="location.href='2090s.html'"></li>
                         <li class="sslide"><img src="pictures/model4.png" alt="4" class="slide-img" onclick="location.href='2110s.html'"></li>
                         <li class="sslide"><img src="pictures/model5.png" alt="5" class="slide-img" onclick="location.href='2075BT.html'"></li>
-                        <li class="sslide"><img src="pictures/model6.png" alt="6" class="slide-img" onclick="location.href='2060BT'"></li>
+                        <li class="sslide"><img src="pictures/model6.png" alt="6" class="slide-img" onclick="location.href='2060BT.html'"></li>
                     </ul>
                 </div>
             </div>
