--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
                     <div class="tractorWrapper" onclick="location.href='2105s.html'">
                         <div>
                             <img class="mainPhoto" src="pictures/21055.png">
-                            <img class="modelPhoto" src="pictures/2105s-Basak.png">
+                            <img class="modelPhoto" src="pictures/2110s-Basak.png">
                             <span class="description">Технологичность, мощность и комфорт. Турецкое производство.</span>
                             <span class="more">подробнее+</span>
                         </div>
@@ -399,6 +399,10 @@
                 
         </div>
     </footer>
+
+    <span class="initial">
+        CREATED BY CHIKILEV DANIL
+    </span>
 
     <script src="js/scroller.js"></script> 
     <script src="js/slider.js"></script>
