--- a/2060BT.html
+++ b/2060BT.html
@@ -305,6 +305,12 @@
         </div>
     </footer>
 
+    <span class="initial">
+        <span>
+            CREATED BY CHIKILEV DANIL
+        </span>
+    </span>
+
     <script src="js/scroller.js"></script> 
     <script src="js/slider.js"></script>
     <script src="js/menu.js"></script>
