--- a/2110s.html
+++ b/2110s.html
@@ -306,6 +306,10 @@
         </div>
     </footer>
 
+    <span class="initial">
+        CREATED BY CHIKILEV DANIL
+    </span>
+
     <script src="js/scroller.js"></script> 
     <script src="js/slider.js"></script>
     <script src="js/menu.js"></script>
