--- a/form.html
+++ b/form.html
@@ -242,6 +242,10 @@
         </div>
     </footer>
 
+    <span class="initial">
+        CREATED BY CHIKILEV DANIL
+    </span>
+
     <script src="js/scroller.js"></script> 
     <script src="js/slider.js"></script>
     <script src="js/menu.js"></script>
